--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "cordova-android": "^8.1.0",
     "cordova-plugin-ble-central": "^1.2.4",
-    "cordova-plugin-bluetooth-serial": "^0.4.7"
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-geolocation": "^4.0.2"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
