--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cordova-android": "^8.1.0",
     "cordova-plugin-ble-central": "^1.2.4",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
-    "cordova-plugin-geolocation": "^4.0.2"
+    "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-inappbrowser": "^3.1.0"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
@@ -26,7 +27,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-ble-central": {},
       "cordova-plugin-bluetooth-serial": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
